cabal-version:  3.0
name:           hls-issue
version:        0.1.0.0
author:         Finley McIlwaine
maintainer:     finleymcilwaine@gmail.com
build-type:     Simple

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

library
  exposed-modules:
      Repro
  other-modules:
  hs-source-dirs:
      src
  build-depends:
      base >=4.9 && <5
    , plutus-core -any
    , plutus-ledger -any
    , plutus-contract -any
    , iots-export -any
    , plutus-tx -any
    , plutus-tx-plugin -any
    , template-haskell -any
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                      DeriveTraversable MultiParamTypeClasses
  ghc-options: -Wall -Wnoncanonical-monad-instances
                -Wincomplete-uni-patterns -Wincomplete-record-updates
                -Wredundant-constraints -Widentities
                -- See PlutusTx readme https://github.com/input-output-hk/plutus/blob/master/plutus-tx/README.md
                -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
